@@ -2,107 +2,118 @@ package lk.ijse.ticketservice.service.impl;
 
 import lk.ijse.ticketservice.dto.TicketRequestDTO;
 import lk.ijse.ticketservice.dto.TicketResponseDTO;
-import lk.ijse.ticketservice.dto.TicketUpdateDTO;
 import lk.ijse.ticketservice.entity.Ticket;
-import lk.ijse.ticketservice.exception.ResourceNotFoundException;
 import lk.ijse.ticketservice.repository.TicketRepository;
 import lk.ijse.ticketservice.service.TicketService;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
-@RequiredArgsConstructor
 @Transactional
 public class TicketServiceImpl implements TicketService {
 
     private final TicketRepository ticketRepository;
 
+    public TicketServiceImpl(TicketRepository ticketRepository) {
+        this.ticketRepository = ticketRepository;
+    }
+
+
     @Override
-    public TicketResponseDTO create(TicketRequestDTO request) {
+    public TicketResponseDTO createTicket(TicketRequestDTO request) {
+
         Ticket ticket = new Ticket();
+
         ticket.setTitle(request.getTitle());
         ticket.setDescription(request.getDescription());
-        ticket.setStatus(Ticket.Status.OPEN);
-        ticket.setCreatedAt(LocalDateTime.now());
+        ticket.setUserId(request.getUserId());
 
-        Ticket saved = ticketRepository.save(ticket);
-        return mapToResponse(saved);
+        Ticket savedTicket = ticketRepository.save(ticket);
+
+        return mapToResponse(savedTicket);
     }
+
 
     @Override
     @Transactional(readOnly = true)
-    public TicketResponseDTO getTicketById(Long id) {
-        Ticket ticket = ticketRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Ticket not found with id: " + id));
-        return mapToResponse(ticket);
+    public Optional<TicketResponseDTO> findById(Long id) {
+
+        return ticketRepository.findById(id)
+                .map(this::mapToResponse);
     }
+
 
     @Override
     @Transactional(readOnly = true)
-    public List<TicketResponseDTO> getAll() {
-        return ticketRepository.findAll().stream()
+    public List<TicketResponseDTO> getAllTickets() {
+
+        return ticketRepository.findAll()
+                .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
 
     @Override
     @Transactional(readOnly = true)
-    public List<TicketResponseDTO> getByUserId(Long userId) {
-        return ticketRepository.findByUserId(userId).stream()
+    public List<TicketResponseDTO> searchTickets(String keyword) {
+
+        return ticketRepository
+                .findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
+                        keyword,
+                        keyword
+                )
+                .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
 
     @Override
-    public TicketResponseDTO updateTicket(Long id, TicketUpdateDTO request) {
+    public TicketResponseDTO updateTicket(
+            Long id,
+            TicketRequestDTO request) {
+
         Ticket ticket = ticketRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Ticket not found with id: " + id));
+                .orElseThrow(() ->
+                        new RuntimeException(
+                                "Ticket not found with id: " + id
+                        )
+                );
 
-        if (request.getTitle() != null) {
-            ticket.setTitle(request.getTitle());
-        }
-        if (request.getDescription() != null) {
-            ticket.setDescription(request.getDescription());
-        }
-        if (request.getStatus() != null) {
-            ticket.setStatus(request.getStatus());
-            if (request.getStatus() == Ticket.Status.RESOLVED || request.getStatus() == Ticket.Status.CLOSED) {
-                ticket.setResolvedAt(LocalDateTime.now());
-            }
-        }
-        if (request.getPriority() != null) {
-            ticket.setPriority(request.getPriority());
-        }
-        if (request.getAssignedTo() != null) {
-            ticket.setAssignedTo(request.getAssignedTo());
-        }
-        if (request.getCategory() != null) {
-            ticket.setCategory(request.getCategory());
-        }
+        ticket.setTitle(request.getTitle());
+        ticket.setDescription(request.getDescription());
+        ticket.setUserId(request.getUserId());
 
-        Ticket updated = ticketRepository.save(ticket);
-        return mapToResponse(updated);
+        Ticket updatedTicket = ticketRepository.save(ticket);
+
+        return mapToResponse(updatedTicket);
     }
+
 
     @Override
     public void deleteTicket(Long id) {
+
         if (!ticketRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Ticket not found with id: " + id);
+            throw new RuntimeException(
+                    "Ticket not found with id: " + id
+            );
         }
+
         ticketRepository.deleteById(id);
     }
 
+
     private TicketResponseDTO mapToResponse(Ticket ticket) {
-        TicketResponseDTO response = new TicketResponseDTO();
-        response.setId(ticket.getId());
-        response.setTitle(ticket.getTitle());
-        response.setDescription(ticket.getDescription());
-        response.setStatus(ticket.getStatus());
-        return response;
+
+        return TicketResponseDTO.builder()
+                .id(ticket.getId())
+                .title(ticket.getTitle())
+                .description(ticket.getDescription())
+                .status(ticket.getStatus())
+                .build();
     }
 }
